minor change bis

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta name="twitter:card" content="summary">
 	<meta property="og:title" content="NetAI Sys 2023: First International Workshop on Networked AI Systems">
 	<meta property="twitter:title" content="NetAI Sys 2023: First International Workshop on Networked AI Systems">
-	<meta property="og:description" content="In this MobiSys 2023 workshop, we are hoping to bring researchers together to discuss opportunities, challenges, solutions, and next steps in the context of TBD.">
-	<meta property="og:url" content="https://emergingdevicesfordigitalbiomarkers.github.io/">
+	<meta property="og:description" content="In this MobiSys 2023 workshop, we are hoping to bring researchers together to discuss opportunities, challenges, solutions, and next steps in the context of Networked AI Systems.">
+	<meta property="og:url" content="https://netaisys.github.io/">
 	<meta property="og:image" content="img/" />
 	<meta property="twitter:image" content="img/" />
 
@@ -248,127 +248,6 @@
 		</div>
 	</section>
 
-	<!-- <section id="keynote">
-		<div class="container">
-		 <div class="col-lg-12 text-center">
-					<h2 class="section-heading">Invited Keynotes</h2>
-					<hr class="primary">
-					<p>TO BE ANNOUNCED SOON.</p>
-				</div>
-			</div>
-			<div class="row text-black">
-				<div class="col-lg-4 col-lg-offset-2 text-center">
-					<div class="service-box">
-						<img class="img-circle" src="img/speakers/shyam.jpeg" alt="Shyam Gollakota" width="150" height="150">
-						<p style="font-size:140%;">Creating the Internet of Biological<br>and Bio-inspired Things</p>
-						<h3>Shyam Gollakota</h3>
-						<p>Professor, Paul G. Allen School of<br>Computer Science & Engineering<br>University of Washington<br>Keynote | <a href="bio/shyam_gollakota.html">Bio</a> </p>
-					</div>
-				</div>
-
-				<div class=" col-lg-4  text-center">
-					<div class="service-box">
-						
-						<img class="img-circle" src="img/speakers/mike.jpeg" alt="Mike Reddy" width="150" height="150">
-						<p style="font-size:140%;">Microsoft Premonition: A New Paradigm for Scalable, Field-based Entomological Monitoring for the Prevention of the Next Mosquito-borne Disease Pandemic</p>
-						<h3>Mike Reddy</h3>
-						<p>Senior Scientist<br>Microsoft Premonition<br>Keynote | <a href="bio/mike_reddy.html">Bio</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
-
-	<!-- <section id="program">
-		<div class="container">
-			<div class="col-lg-12 text-center">
-				<h2 class="section-heading">Program</h2>
-				<hr class="primary">
-			</div>
-
-			<div class="col-lg-12 text-left">
-			<p>TO BE ANNOUNCED SOON.</p>
-
-			<table class="table table-striped">
-			  <thead class="thead-default">
-				<tr>
-				  <th>Time (PDT)</th>
-				  <th>Event</th>
-				</tr>
-			  </thead>
-			  <tbody>
-				  <tr>
-				  <th class="text-nowrap" scope="row">9:00 AM – 9:30 AM</th>
-				  <td>Welcome Address and Icebreakers</td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">9:30 AM - 10:30 AM</th>
-				  <td>Invited Keynote by <a href="bio/shyam_gollakota.html">Shyam Gollakota</a></td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">10:30 AM - 11:00 AM</th>
-				  <td>Coffee Break</td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">11:00 AM - 11:45 AM</th>
-				  <td><b>Paper Session I - Physical Health</b>
-					<ul>
-						<li><a href="https://dl.acm.org/doi/10.1145/3539494.3542757">SkinProfiler: low-cost 3D scanner for skin health monitoring with mobile devices</a></li>
-						<li><a href="https://dl.acm.org/doi/10.1145/3539494.3542756">A smart thermostat-based population-level behavioural changes during the COVID-19 pandemic in the United States: a proposed study</a></li>
-						<li><a href="https://dl.acm.org/doi/10.1145/3539494.3542753">A multi-sensor deep learning approach for complex daily living activity recognition</a></li>
-					</ul>
-				  </td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">11:45 AM - 12:30 PM</th>
-				  	<td>
-						Fireside Chat with <a href="bio/raji_baskaran.html">Raji Baskaran</a> and <a href="bio/sankalita_saha.html">Sankalita Saha</a>
-						</ul>
-					</td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">12:30 PM - 2:00 PM</th>
-				  <td>Lunch Break</td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">2:00 PM - 2:45 PM</th>
-				  <td><b>Paper Session II - Stress and Neurology</b>
-					<ul>
-						<li><a href="https://dl.acm.org/doi/10.1145/3539494.3542752">A novel mobile platform for stress prediction: application, protocol and preliminary results</a></li>
-						<li><a href="https://dl.acm.org/doi/10.1145/3539494.3542755">Monitoring neurological disorders with AI-enabled wearable systems</a></li>
-						<li><a href="https://dl.acm.org/doi/10.1145/3539494.3542754">Digital biomarkers reflect stress reduction after augmented reality guided meditation: a feasibility study</a></li>
-					</ul>
-				  </td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">2:45 PM - 3:30 PM</th>
-				  <td>Visioning Exercise on Emerging Devices for Digital Biomarkers</td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">3:30 PM - 4:00 PM</th>
-				  <td>Coffee Break</td>
-				  </tr>
-
-				  <tr>
-				  <th class="text-nowrap" scope="row">4:00 PM - 5:00 PM</th>
-				  <td>Invited Keynote by <a href="bio/mike_reddy.html">Mike Reddy</a></td>
-				  </tr>
-
-			</tbody>
-			</table>
-		</div>
-	</div> 
-
-	</section> -->
 
 	<section id="organizers">
 		<div class="container">
@@ -423,67 +302,13 @@
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
 					<p>TO BE ANNOUNCED SOON.</p>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
-					<!--  <ul>
-						<li><p><a href="https://sites.google.com/a/cornell.edu/alexander-t-adams/home">Alexander T Adams, Cornell Tech</a></p></li>
-						<li><p><a href="http://www.nalshurafa.com/">Nabil Alshurafa, Northwestern University</a></p></li>
-						<li><p><a href="http://niveditaarora.com/">Nivedita Arora, Georgia Institute of Technology</a></p></li>
-						<li><p><a href="https://www.teco.edu/people/beigl/">Michael Beigl, Karlsruhe Institute of Technology</a></p></li>
-						<li><p><a href="https://www.cs.dartmouth.edu/~campbell/">Andrew Campbell, Dartmouth College</a></p></li>
-						<li><p><a href="https://www.linkedin.com/in/soujanya-chatterjee">Soujanya Chatterjee, Amazon</a></p></li>
-						<li><p><a href="https://research.cornell.edu/researchers/tanzeem-choudhury">Tanzeem Choudhury, Cornell University</a></p></li>
-						<li><p><a href="https://www.microsoft.com/en-us/research/people/gabe/">Gabe Cohn, Microsoft Research</a></p></li>
-						<li><p><a href="http://www.cs.toronto.edu/~delara/">Eyal de Lara, University of Toronto</a></p></li>
-						<li><p><a href="http://dunn.pratt.duke.edu/people/jessilyn-dunn">Jessilyn Dunn, Duke University</a></p></li>
-						<li><p><a href="https://people.cs.umass.edu/~dganesan/">Deepak Ganesan, University of Massachusetts Amherst</a></p></li>
-						<li><p><a href="https://www.microsoft.com/en-us/research/people/sidhant/">Sidhant Gupta, Microsoft Research</a></p></li>
-						<li><p><a href="https://sites.google.com/view/unsoo-ha/home">Unsoo Ha, MIT Media Lab</a></p></li>
-						<li><p><a href="https://www.linkedin.com/in/thao1">Tian Hao, Johnson & Johnson</a></p></li>
-						<li><p><a href="https://homepage.ntu.edu.tw/~pollyhuang/">Polly Huang, National Taiwan University</a></p></li>
-						<li><p><a href="https://users.wpi.edu/~bislam/">Bashima Islam, University of Illinois at Urbana Champaign</a></p></li>
-						<li><p><a href="https://homes.cs.washington.edu/~vsiyer/">Vikram Iyer, University of Washington</a></p></li>
-						<li><p><a href="https://www.ee.ucla.edu/achuta-kadambi/">Achuta Kadambi, University of California Los Angeles</a></p></li>
-						<li><p><a href="https://www.ntu.ac.uk/staff-profiles/science-technology/eiman-kanjo">Eiman Kanjo, Nottingham Trent University</a></p></li>
-						<li><p><a href="https://homes.cs.washington.edu/~rkarkar/">Ravi Karkar, University of Washington</a></p></li>
-						<li><p><a href="https://swarunkumar.com/">Swarun Kumar, Carnegie Mellon University</a></p></li>
-						<li><p><a href="http://chulhongmin.com/">Chulhong Min, Nokia Bell Labs</a></p></li>
-						<li><p><a href="https://uwaterloo.ca/public-health-sciences/people-profiles/plinio-morita">Plinio Morita, University of Waterloo</a></p></li>
-						<li><p><a href="https://infosci.cornell.edu/~rajalakshmi/">Rajalakshmi Nandakumar, Cornell University and Cornell Tech</a></p></li>
-						<li><p><a href="http://wsslab.org/vpnguyen/">VP Nguyen, University of Texas at Arlington</a></p></li>
-						<li><p><a href="https://ihpme.utoronto.ca/faculty/quynh-pham/">Quynh Pham, University of Toronto</a></p></li>
-						<li><p><a href="https://www.cc.gatech.edu/people/thomas-ploetz">Thomas Ploetz, Georgia Institute of Technology</a></p></li>
-						<li><p><a href="https://mashfiqui-rabbi.github.io/">Mashfiqui Rabbi, Apple</a></p></li>
-						<li><p><a href="https://www.linkedin.com/in/mahbubur2000">Mahbubur Rahman, Samsung Research America</a></p></li>
-						<li><p><a href="https://fsalim.github.io/">Flora Salim, University of New South Wales</a></p></li>
-						<li><p><a href="http://users.ece.utexas.edu/~ethomaz/">Edison Thomaz, University of Texas at Austin</a></p></li>
-						<li><p><a href="https://ameetrivedi.github.io/">Amee Trivedi, University of British Columbia</a></p></li>
-						<li><p><a href="http://pi.cs.tsinghua.edu.cn/lab/people/YuntaoWang/en/">Yuntao Wang, Tsinghua University</a></p></li>
-						<li><p><a href="https://yangzhang.dev/">Yang Zhang, University of California Los Angeles</a></p></li>
-						<li><p><a href=""></a></p></li>
-					</ul> --> 
+
 				</div>
 			</div>
 
 		</div>
 	</section>
 
-
-
-
-<!--	<section id="past-workshops">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<h2 class="section-heading">Past Workshops</h2>
-					<hr class="primary">
-
-					<p class="text-black text-center">
-						<a href="https://digitalbiomarkers.github.io/">Workshop on the Future of Digital Biomarkers</a> @ MobiSys 2021
-					</p>
-
-				</div>
-			</div>
-		</div>
-	</section> -->
 
 	<section id="contact">
 		<div class="container">
