--- a/index.html
+++ b/index.html
@@ -313,13 +313,13 @@
 	<section id="contact">
 		<div class="container">
 		 <div class="col-lg-12 text-center">
-					<h2 class="section-heading">Contact</h2>
+					<h2 class="section-heading">Contact and Acknowledgements</h2>
 					<hr class="primary">
 				</div>
 			</div>
 			<div class="row text-black">
 				<div class="col-lg-12 text-center">
-					If you have any questions, please contact <i><a href="mailto:roberto.morabito@helsinki.fi">Roberto Morabito</a></i>, <i><a href="mailto:kimkt@purdue.edu">Kwang Taik Kim.
+					If you have any questions, please contact <i><a href="mailto:roberto.morabito@helsinki.fi">Roberto Morabito</a></i>, <i><a href="mailto:kimkt@purdue.edu">Kwang Taik Kim</a></i>.<br>Homepage picture is by Janne Hirvonen / Helsinki Partners.
 				</div>
 		</div>
 	</section>
