picture credits second

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 			</div>
 			<div class="row text-black">
 				<div class="col-lg-12 text-center">
-					If you have any questions, please contact <i><a href="mailto:roberto.morabito@helsinki.fi">Roberto Morabito</a></i>, <i><a href="mailto:kimkt@purdue.edu">Kwang Taik Kim</a></i>.<br>Homepage picture is by Janne Hirvonen / Helsinki Partners.
+					If you have any questions, please contact <i><a href="mailto:roberto.morabito@helsinki.fi">Roberto Morabito</a></i>, <i><a href="mailto:kimkt@purdue.edu">Kwang Taik Kim</a></i>.<br>Homepage picture is by Janne Hirvonen / Helsinki Partners. Full pictura available <a href="https://materialbank.myhelsinki.fi/images?query=tower&sort=relevance&openMediaId=5487">here.</a></i>
 				</div>
 		</div>
 	</section>
