link opening in a new tab

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<div class="col-lg-4 text-center">
 						<i class="fa fa-4x fa-cloud-upload wow bounceIn text-primary" data-wow-delay=".2s"></i>
 						<h3>Submission System</h3>
-						<p class="text-left">Submit your work via <a href="https://mobisys23workshops.hotcrp.com/">TBD</a>.</p>
+						<p class="text-left">Submit your work via <a href="https://mobisys23workshops.hotcrp.com/" target="_blank" rel="noopener noreferrer">TBD</a>.</p>
 				</div>
 			</div>
 			
@@ -235,7 +235,7 @@
 					<div class="col-lg-offset-2 text-center">
 						<i class="fa fa-4x fa-user-plus wow bounceIn text-primary" data-wow-delay=".1s"></i>
 						<h3>Registration</h3>
-						<p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2023/registration.html">registration information for MobiSys 2023</a>. Important dates:</p>
+						<p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2023/registration.html" target="_blank" rel="noopener noreferrer">registration information for MobiSys 2023</a>. Important dates:</p>
 						<div class="text-black text-left">
 							<ul>
 							  <li><p>Early Registration 1: <b>To be announced.</b></p></li>
@@ -319,7 +319,7 @@
 			</div>
 			<div class="row text-black">
 				<div class="col-lg-12 text-center">
-					If you have any questions, please contact <i><a href="mailto:roberto.morabito@helsinki.fi">Roberto Morabito</a></i>, <i><a href="mailto:kimkt@purdue.edu">Kwang Taik Kim</a></i>.<br>Homepage picture is by Janne Hirvonen / Helsinki Partners. Full pictura available <a href="https://materialbank.myhelsinki.fi/images?query=tower&sort=relevance&openMediaId=5487">here.</a></i>
+					If you have any questions, please contact <i><a href="mailto:roberto.morabito@helsinki.fi" target="_blank" rel="noopener noreferrer">Roberto Morabito</a></i>, <i><a href="mailto:kimkt@purdue.edu" target="_blank" rel="noopener noreferrer">Kwang Taik Kim</a></i>.<br>Homepage picture is by Janne Hirvonen / Helsinki Partners. Full pictura available <a href="https://materialbank.myhelsinki.fi/images?query=tower&sort=relevance&openMediaId=5487">here.</a></i>
 				</div>
 		</div>
 	</section>
