link opening in a new tab second

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 					<div class="service-box">
 
 						<img class="img-circle" src="./img/organizers/roberto.png" alt="Rounded image" width="150" height="150">
-						<h2><a href="https://www.linkedin.com/in/robertomorabito/">Roberto Morabito</a></h2>
+						<h2><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito</a></h2>
 						<p>University of Helsinki</p>
 					</div>
 
@@ -270,7 +270,7 @@
 				<div class="col-lg-4 text-center">
 					<div class="service-box">
 						<img class="img-circle" src="./img/organizers/kwang.png" alt="Rounded image" width="150" height="150">
-						<h2><a href="https://kimkt.com/">Kwang Taik Kim</a></h2>
+						<h2><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim</a></h2>
 						<p>Purdue University</p>
 					</div>
 
