--- a/index.html
+++ b/index.html
@@ -302,10 +302,11 @@
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
 					<p>TPC currently being updated.</p>
 					<ul>
-						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html">Carlee Joe-Wong (Carnegie Mellon University)</a></p></li>
-						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour">Seyyedali Hosseinalipour (University of Buffalo)</a></p></li>
-						<li><p><a href="https://ometov.com/">Aleksandr Ometov (Tampere University)</a></p></li>
-						<li><p><a href="https://gpremsan.github.io/">Gopika Premsankar (University of Helsinki)</a></p></li>
+						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
+						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
+						<li><p><a href="https://ometov.com/">Aleksandr Ometov, Tampere University</a></p></li>
+						<li><p><a href="https://gpremsan.github.io/">Gopika Premsankar, University of Helsinki</a></p></li>
+						<li><p><a href="https://gpremsan.github.io/">Aaron Ding, TU Delft</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
