--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
 						<li><p><a href="https://ometov.com/">Aleksandr Ometov, Tampere University</a></p></li>
 						<li><p><a href="https://gpremsan.github.io/">Gopika Premsankar, University of Helsinki</a></p></li>
-						<li><p><a href="https://gpremsan.github.io/">Aaron Ding, TU Delft</a></p></li>
+						<li><p><a href="https://sk-alg.tbm.tudelft.nl/aaron/">Aaron Ding, TU Delft</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
