--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
 						<li><p><a href="https://gpremsan.github.io/">Gopika Premsankar, University of Helsinki</a></p></li>
 						<li><p><a href="https://sk-alg.tbm.tudelft.nl/aaron/">Aaron Ding, TU Delft</a></p></li>
 						<li><p><a href="https://fi.linkedin.com/in/antonino-orsino-035b0633">Antonino Orsino, Ericsson</a></p></li>
+						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
