--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 						<li><p><a href="https://sk-alg.tbm.tudelft.nl/aaron/">Aaron Ding, TU Delft</a></p></li>
 						<li><p><a href="https://fi.linkedin.com/in/antonino-orsino-035b0633">Antonino Orsino, Ericsson</a></p></li>
 						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
+						<li><p><a href="https://scholar.google.com/citations?user=MDI5a9IAAAAJ&hl=en">Claudia Campolo, Università Mediterranea di Reggio Calabria</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
