--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<div class="col-lg-4 text-center">
 						<i class="fa fa-4x fa-cloud-upload wow bounceIn text-primary" data-wow-delay=".2s"></i>
 						<h3>Submission System</h3>
-						<p class="text-left">Submit your work via <a href="" target="https://netaisys23.hotcrp.com/" rel="noopener noreferrer">HotCRP</a>.</p>
+						<p class="text-left">Submit your work via <a href="https://netaisys23.hotcrp.com/" target="_blank" rel="noopener noreferrer">HotCRP</a>.</p>
 				</div>
 			</div>
 			
