--- a/index.html
+++ b/index.html
@@ -292,6 +292,24 @@
 
 
 	<section id="program-committee">
+			<div class="container">
+			 <div class="col-lg-12 text-center">
+						<h2 class="section-heading">Programme & General Chairs</h2>
+						<hr class="primary">
+			 </div>
+			 <div class="row text-black text-center">
+
+				<div class="col-lg-12 col-lg-offset-1 text-left">
+					<ul>
+						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html">Roberto Morabito, University of Helsinki</a></p></li>
+						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour">Kwang Taik Kim, Purdue University</a></p></li>
+						<li><p><a href="https://ometov.com/">Susanna Pirttikangas, University of Oulu</a></p></li>
+					</ul>
+
+				</div>
+			</div>
+
+		</div>
 		<div class="container">
 			 <div class="col-lg-12 text-center">
 						<h2 class="section-heading">Technical Program Committee</h2>
