programme chairs updated - links fix

--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 
 				<div class="col-lg-12 col-lg-offset-1 text-left">
 					<ul>
-						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html">Roberto Morabito, University of Helsinki</a></p></li>
-						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour">Kwang Taik Kim, Purdue University</a></p></li>
-						<li><p><a href="https://ometov.com/">Susanna Pirttikangas, University of Oulu</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/robertomorabito/">Roberto Morabito, University of Helsinki</a></p></li>
+						<li><p><a href="https://kimkt.com/">Kwang Taik Kim, Purdue University</a></p></li>
+						<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas">Susanna Pirttikangas, University of Oulu</a></p></li>
 					</ul>
 
 				</div>
