--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 
 				<div class="col-lg-12 col-lg-offset-1 text-left">
 					<ul>
-						<li><p><a href="https://www.linkedin.com/in/robertomorabito/">Roberto Morabito, University of Helsinki</a></p></li>
-						<li><p><a href="https://kimkt.com/">Kwang Taik Kim, Purdue University</a></p></li>
-						<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas">Susanna Pirttikangas, University of Oulu</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito, University of Helsinki</a></p></li>
+						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
+						<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas" target="_blank" rel="noopener noreferrer">Susanna Pirttikangas, University of Oulu</a></p></li>
 					</ul>
 
 				</div>
@@ -320,14 +320,14 @@
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
 					<p>TPC currently being updated.</p>
 					<ul>
-						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
-						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
-						<li><p><a href="https://ometov.com/">Aleksandr Ometov, Tampere University</a></p></li>
-						<li><p><a href="https://gpremsan.github.io/">Gopika Premsankar, University of Helsinki</a></p></li>
-						<li><p><a href="https://sk-alg.tbm.tudelft.nl/aaron/">Aaron Ding, TU Delft</a></p></li>
-						<li><p><a href="https://fi.linkedin.com/in/antonino-orsino-035b0633">Antonino Orsino, Ericsson</a></p></li>
-						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
-						<li><p><a href="https://scholar.google.com/citations?user=MDI5a9IAAAAJ&hl=en">Claudia Campolo, Università Mediterranea di Reggio Calabria</a></p></li>
+						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html" target="_blank" rel="noopener noreferrer">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
+						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
+						<li><p><a href="https://ometov.com/" target="_blank" rel="noopener noreferrer">Aleksandr Ometov, Tampere University</a></p></li>
+						<li><p><a href="https://gpremsan.github.io/" target="_blank" rel="noopener noreferrer">Gopika Premsankar, University of Helsinki</a></p></li>
+						<li><p><a href="https://sk-alg.tbm.tudelft.nl/aaron/" target="_blank" rel="noopener noreferrer">Aaron Ding, TU Delft</a></p></li>
+						<li><p><a href="https://fi.linkedin.com/in/antonino-orsino-035b0633" target="_blank" rel="noopener noreferrer">Antonino Orsino, Ericsson</a></p></li>
+						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
+						<li><p><a href="https://scholar.google.com/citations?user=MDI5a9IAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Claudia Campolo, Università Mediterranea di Reggio Calabria</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
