--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
 						<li><p><a href="https://scholar.google.com/citations?user=MDI5a9IAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Claudia Campolo, Università Mediterranea di Reggio Calabria</a></p></li>
 						<li><p><a href="https://scholar.google.co.kr/citations?user=VHuU14AAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Abhishek Kumar, University of Oulu</a></p></li>
+						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
