--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
 						<li><p><a href="https://scholar.google.com/citations?user=MDI5a9IAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Claudia Campolo, Università Mediterranea di Reggio Calabria</a></p></li>
 						<li><p><a href="https://scholar.google.co.kr/citations?user=VHuU14AAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Abhishek Kumar, University of Oulu</a></p></li>
 						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
+						<li><p><a href="https://www.umu.se/en/staff/atakan-aral/" target="_blank" rel="noopener noreferrer">Atakan Aral, Umeå University</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
