--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="twitter:card" content="summary">
-	<meta property="og:title" content="NetAISys 2023: First International Workshop on Networked AI Systems">
-	<meta property="twitter:title" content="NetAI Sys 2023: First International Workshop on Networked AI Systems">
+	<meta property="og:title" content="NetAISys 2023 – 1st International Workshop on Networked AI Systems">
+	<meta property="twitter:title" content="NetAI Sys 2023 – 1st International Workshop on Networked AI Systems">
 	<meta property="og:description" content="In this MobiSys 2023 workshop, we are hoping to bring researchers together to discuss opportunities, challenges, solutions, and next steps in the context of Networked AI Systems.">
 	<meta property="og:url" content="https://netaisys.github.io/">
 	<meta property="og:image" content="img/" />
@@ -122,7 +122,7 @@
 					<hr class="light">
 
 					<p class="text-black text-left">
-						The First International Workshop on Networked AI Systems (NetAISys), colocated with MobiSys 2023, aims to bring together leading experts in the field to explore the latest advancements and challenges in the integration of AI and networking technologies. Such integration is driving the development of intelligent and autonomous systems that are capable of making decisions and performing tasks in real-time. The workshop will provide a platform for the presentation and discussion of cutting-edge research, the demonstration of innovative networked AI systems and applications, and the exchange of ideas, experiences, and case studies. The significance of this workshop to the ACM MobiSys community lies in the growing reliance on AI systems that are connected to and operate within wireless networks. With AI/ML migrating to the network edge, there is an increasing demand for efficient and effective AI systems that play a crucial role in powering various intelligent and autonomous systems in dynamic network environments with varying network conditions. By bringing together researchers, practitioners, and industry professionals, we hope to create a collaborative environment and a one-of-kind and valuable opportunity to delve into the challenges and latest advancements presented by networked AI systems and applications. We look forward to sharing our experience and insights with the ACM MobiSys community.
+						The 1st International Workshop on Networked AI Systems (NetAISys), colocated with MobiSys 2023, aims to bring together leading experts in the field to explore the latest advancements and challenges in the integration of AI and networking technologies. Such integration is driving the development of intelligent and autonomous systems that are capable of making decisions and performing tasks in real-time. The workshop will provide a platform for the presentation and discussion of cutting-edge research, the demonstration of innovative networked AI systems and applications, and the exchange of ideas, experiences, and case studies. The significance of this workshop to the ACM MobiSys community lies in the growing reliance on AI systems that are connected to and operate within wireless networks. With AI/ML migrating to the network edge, there is an increasing demand for efficient and effective AI systems that play a crucial role in powering various intelligent and autonomous systems in dynamic network environments with varying network conditions. By bringing together researchers, practitioners, and industry professionals, we hope to create a collaborative environment and a one-of-kind and valuable opportunity to delve into the challenges and latest advancements presented by networked AI systems and applications. We look forward to sharing our experience and insights with the ACM MobiSys community.
 					</p>
 		</div>
 		</div>
