--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
 				<div class="col-lg-4 text-center">
 					<div class="service-box">
-						<img class="img-circle" src="./img/organizers/kwang.png" alt="Rounded image" width="150" height="150">
+						<img class="img-circle" src="./img/organizers/KTKim.jpg" alt="Rounded image" width="150" height="150">
 						<h2><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim</a></h2>
 						<p>Purdue University</p>
 					</div>
