--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
 						<li><p><a href="https://ometov.com/" target="_blank" rel="noopener noreferrer">Aleksandr Ometov, Tampere University</a></p></li>
 						<li><p><a href="https://gpremsan.github.io/" target="_blank" rel="noopener noreferrer">Gopika Premsankar, University of Helsinki</a></p></li>
+						<li><p><a href="https://aveith.github.io/" target="_blank" rel="noopener noreferrer">Alexandre da Silva Veith, Nokia Bell Labs</a></p></li>
 						<li><p><a href="https://sk-alg.tbm.tudelft.nl/aaron/" target="_blank" rel="noopener noreferrer">Aaron Ding, TU Delft</a></p></li>
 						<li><p><a href="https://fi.linkedin.com/in/antonino-orsino-035b0633" target="_blank" rel="noopener noreferrer">Antonino Orsino, Ericsson</a></p></li>
 						<li><p><a href="https://networks.imdea.org/team/imdea-networks-team/people/jaya-prakash-varma-champati/" target="_blank" rel="noopener noreferrer">Jaya Prakash Champati, IMDEA Networks Institute</a></p></li>
