--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 							  <li><p>Default Registration: <b>To be announced.</b></p></li>
 							</ul>         
 						</div>
-						<p class="text-left">Each accepted paper must be covered by a non-student registration by one of the authors.</p>
+						<p class="text-left">Each accepted paper must be covered by a non-student registration from at least one of the authors.</p>
 					</div>
 		</div>
 	</section>
