--- a/index.html
+++ b/index.html
@@ -235,15 +235,16 @@
 					<div class="col-lg-offset-2 text-center">
 						<i class="fa fa-4x fa-user-plus wow bounceIn text-primary" data-wow-delay=".1s"></i>
 						<h3>Registration</h3>
-						<p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2023/registration.html" target="_blank" rel="noopener noreferrer">registration information for MobiSys 2023</a>. Important dates:</p>
+						<!-- <p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2023/registration.html" target="_blank" rel="noopener noreferrer">registration information for MobiSys 2023</a>. Important dates:</p>
 						<div class="text-black text-left">
 							<ul>
 							  <li><p>Early Registration 1: <b>To be announced.</b></p></li>
 							  <li><p>Early Registration 2: <b>To be announced.</b></p></li>
 							  <li><p>Default Registration: <b>To be announced.</b></p></li>
 							</ul>         
-						</div>
-						<p class="text-left">Each accepted paper must be covered by a non-student registration from at least one of the authors.</p>
+						</div> -->
+						<!--  <p class="text-left">Each accepted paper must be covered by a non-student registration from at least one of the authors.</p> -->
+						<p class="text-left">Workshop registration details to be announced soon.</p>
 					</div>
 		</div>
 	</section>
