--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
 						<li><p><a href="https://www.umu.se/en/staff/atakan-aral/" target="_blank" rel="noopener noreferrer">Atakan Aral, Umeå University</a></p></li>
 						<li><p><a href="https://kr.linkedin.com/in/si-young-jang-bb336457" target="_blank" rel="noopener noreferrer">Si-Young Jang, Nokia Bell Labs</a></p></li>
 						<li><p><a href="https://sites.google.com/view/professorflaviadelicato/home" target="_blank" rel="noopener noreferrer">Flavia Delicato, Fluminense Federal University</a></p></li>
+						<li><p><a href="https://jspencer.org/" target="_blank" rel="noopener noreferrer">Jonathan Spencer, Waymo</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
